fluxcd/apps/overlays/production/it-tools/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: it-tools
spec:
  replicas: 3
  template:
    metadata:
      labels:
        policy.prplanit.com/ingress: "true"
    spec:
      securityContext:
        runAsUser: 101
        runAsGroup: 101
      imagePullSecrets:
        - name: cr-pcfae-admin-pull-secret
      containers:
        - name: it-tools
          image: docker.io/corentinth/it-tools:2024.10.22-7ca5933
          resources:
            requests:
              cpu: "2m"
              memory: "16Mi"
            limits:
              cpu: "10m"
              memory: "20Mi"
