fluxcd/apps/overlays/production/it-tools/namespace-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: it-tools
  namespace: tingle-tuner
---
apiVersion: v1
kind: Service
metadata:
  name: it-tools
  namespace: tingle-tuner
