fluxcd/apps/overlays/production/it-tools/service-it-tools-ingress-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: it-tools
  labels:
    policy.prplanit.com/ingress: "true"
