fluxcd/apps/overlays/production/it-tools/httproute-xylem.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: it-tools-xylem
  annotations:
    gatus.home-operations.com/endpoint: |
      group: "Tools & Utilities (Tingle Tuner🔧)"
spec:
  parentRefs:
    - name: phloem-gateway
      namespace: arylls-lookout
  hostnames:
    - "ittools.pcfae.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: it-tools
          port: 9290
